--- a/public/index.html
+++ b/public/index.html
@@ -43,22 +43,22 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Just stylesheet for my jpopsuki account <small><a href="//github.com/feryardiant/jpopsuki-style">[Source]</a></small></h1>
+      <h1>Just stylesheet for my jpopsuki account <small><a href="//github.com/amorphobia/jpopsuki-style">[Source]</a></small></h1>
     </header>
     <section>
       <h3>Usage</h3>
       <p>Copy link below and paste in your Site Preferences > Stylesheet > External CSS</p>
-      <pre>https://feryardiant.id/jpopsuki-style/style.min.css</pre>
+      <pre>https://jpopsuki-style.xuesong.io/style.min.css</pre>
       <h3>Screenshots</h3>
       <table border="0"><tr>
-        <td><a href="/jpopsuki-style/screenshots/01-Home-dark.png"><img src="/jpopsuki-style/screenshots/01-Home-dark.png" alt="home"></a></td>
-        <td><a href="/jpopsuki-style/screenshots/02-Torrents-dark.png"><img src="/jpopsuki-style/screenshots/02-Torrents-dark.png" alt="artist"></a></td>
+        <td><a href="./screenshots/01-Home-dark.png"><img src="./screenshots/01-Home-dark.png" alt="home"></a></td>
+        <td><a href="./screenshots/02-Torrents-dark.png"><img src="./screenshots/02-Torrents-dark.png" alt="artist"></a></td>
       </tr><tr>
-        <td><a href="/jpopsuki-style/screenshots/03-ForumList-dark.png"><img src="/jpopsuki-style/screenshots/03-ForumList-dark.png" alt="album"></a></td>
-        <td><a href="/jpopsuki-style/screenshots/04-ForumPost-dark.png"><img src="/jpopsuki-style/screenshots/04-ForumPost-dark.png" alt="footer"></a></td>
+        <td><a href="./screenshots/03-ForumList-dark.png"><img src="./screenshots/03-ForumList-dark.png" alt="album"></a></td>
+        <td><a href="./screenshots/04-ForumPost-dark.png"><img src="./screenshots/04-ForumPost-dark.png" alt="footer"></a></td>
       </tr><tr>
-        <td><a href="/jpopsuki-style/screenshots/05-Collages-dark.png"><img src="/jpopsuki-style/screenshots/05-Collages-dark.png" alt="album"></a></td>
-        <td><a href="/jpopsuki-style/screenshots/06-TopTen-dark.png"><img src="/jpopsuki-style/screenshots/06-TopTen-dark.png" alt="footer"></a></td>
+        <td><a href="./screenshots/05-Collages-dark.png"><img src="./screenshots/05-Collages-dark.png" alt="album"></a></td>
+        <td><a href="./screenshots/06-TopTen-dark.png"><img src="./screenshots/06-TopTen-dark.png" alt="footer"></a></td>
       </tr></table>
       <h3>Credits</h3>
       <ul>
