publish: generate github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section>
       <h3>Usage</h3>
       <p>Copy link below and paste in your Site Preferences > Stylesheet > External CSS</p>
-      <pre>https://amorphobia.github.io/jpopsuki-style/style.min.css</pre>
+      <pre>https://blog.xuesong.io/jpopsuki-style/style.min.css</pre>
       <h3>Screenshots</h3>
       <table border="0"><tr>
         <td><a href="/jpopsuki-style/screenshots/01-Home-dark.png"><img src="/jpopsuki-style/screenshots/01-Home-dark.png" alt="home"></a></td>
